# weather-app

./: .gitignore  Cargo.toml  MVC-REVIEW.md  README.md
src/: constants.rs  errors.rs  lib.rs  main.rs
src/controllers/: cl_controller.rs  mod.rs
src/models/: mod.rs  weather_info.rs
src/repositories/: mod.rs  weather_repository.rs
src/utils/: conversions.rs
src/views/: cl_view.rs  gui_view.rs  mod.rs
